--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
-    "build": "node scripts/build.js",
+    "build:prod": "node scripts/build.js",
     "precompile": "cross-env MODE=production npm run build",
-    "build:fast": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+    "build": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
     "pretest": "npm run build",
     "test": "node tests/app.spec.js",
     "start": "node scripts/watch.js",
