--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mct",
+  "version": "0.1.0",
   "private": true,
   "engines": {
     "node": ">=v14.16",
@@ -9,7 +10,8 @@
   "scripts": {
     "build:prod": "node scripts/build.js",
     "precompile": "cross-env MODE=production npm run build",
-    "build": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+    "build": "electron-builder",
+    "build:fast": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
     "pretest": "npm run build",
     "test": "node tests/app.spec.js",
     "start": "node scripts/watch.js",
@@ -58,5 +60,16 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "sass": "^1.42.1"
+  },
+  "build": {
+    "appId": "mct",
+    "productName": "mct",
+    "files": [
+      "packages/**/dist/**"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "build/mct.png"
+    }
   }
 }
