--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
-    "build:prod": "node scripts/build.js",
-    "precompile": "cross-env MODE=production npm run build",
-    "build": "electron-builder",
-    "build:fast": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
-    "pretest": "npm run build",
-    "test": "node tests/app.spec.js",
+    "clean": "rimraf dist",
+    "build": "cross-env MODE=production npm-run-all clean compile _build:noinstaller",
+    "build:installer": "cross-env MODE=production npm-run-all clean compile _build:installer",
     "start": "node scripts/watch.js",
     "dev": "node scripts/watch.js",
     "lint": "eslint . --ext js,ts,tsx",
+    "compile": "node scripts/build.js",
+    "_build:installer": "electron-builder",
+    "_build:noinstaller": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+    "test": "node tests/app.spec.js",
     "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
     "typecheck-renderer": "tsc --noEmit -p packages/renderer/tsconfig.json",
@@ -38,13 +39,15 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "electron": "15.1.1",
     "electron-builder": "22.11.7",
     "electron-devtools-installer": "3.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "lint-staged": "11.2.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "simple-git-hooks": "2.6.1",
     "typescript": "4.4.2",
     "vite": "2.6.3"
