--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "@xmldom/xmldom": "^0.7.5",
     "cross-env": "^7.0.3",
     "electron": "15.1.1",
     "electron-builder": "22.11.7",
